--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,16 +1,13 @@
 .footer {
     position: relative;
     width: 100%;
-    /* padding: 5% 0; */
     margin-top: 5rem;
     text-align: center;
-
 }
 
 .footerWrapper {
     position: relative;
     width: 90%;
-    /* max-width: 1400px; */
     border-top: 2px solid #D9D9D9;
     padding: 1.5rem 0 3rem 0;
     left: 50%;
@@ -23,7 +20,6 @@
 
 .navigationHeading {
     font-size: .75rem;
-
 }
 
 .line {
@@ -44,18 +40,10 @@
     line-height: 150%;
     font-size: .75rem;
     transition: .2s;
-    
-}
-
-.socialMediaIconLink {
-    /* background-color: #D9D9D9; */
-    /* display: vlock; */
 }
 
 .socialMediaIcon {
     fill: #323232 !important;
-    /* fill: #ffffff !important; */
-    /* background-color: rgb(128, 128, 128); */
     width: 2rem !important;
     height: 2rem !important;
     margin: .5rem .5rem 0 .5rem;
@@ -72,5 +60,24 @@
 
 .footerLink:hover {
   font-weight: 700;
-    /* background-color: black; */
+}
+
+@media (min-width: 768px) {
+    
+    .footerWrapper {
+        display: flex;
+        width: 95%;
+        justify-content: space-between;
+    }
+
+    .footerNavigationWrapper {
+        display: flex;
+        flex-grow: 1;
+        justify-content: space-between;
+        margin-right: 30%;
+    }
+    
+    .navigationGroup {
+        margin: unset;
+    }
 }
