--- a/src/Search/Search.module.css
+++ b/src/Search/Search.module.css
@@ -1,75 +1,14 @@
-.navigation {
-    /* position: fixed; */
-    position: -webkit-sticky;
-    position: sticky;
-top: 0;
-    width: 100%;
-    background-color: #fff;
-    padding: .3rem;
-    box-sizing: border-box;
-    z-index: 10;
-}
-
-.navigationWrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%);
-}
-
-.logoLink {
-    width: 4.5rem;
-}
-
-.logo {
-    background-color: rgba(0, 0, 0, 0.743);
-    width: 100%;
-    display: block;
-}
-
-.navigationItemsWrapper {
-    position: absolute;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    top: 100%;
-    z-index: 10;
-    left: 50%;
-    transform: translate(-50%);
-    padding: 5%;
-    transition: .2s;
-    opacity: 0;
-    pointer-events: none;
-}
-
-.navigationItemsWrapper li {
-    margin: 2%;
-}
-
-.productsWrapper {
-    display: flex;
-    align-items: flex-start;
-}
-
-.searchWrapper {
-    position: absolute;
-    top: 100%;
-    width: 100vw;
-    z-index: 10;
-    background-color: #fff;
-    padding: 1.5rem;
-    left: 50%;
-    transform: translate(-50%);
-    transition: .2s;
-    opacity: 0;
-    pointer-events: none;
-}
-
 .searchIcon {
     display: none !important;
+}
+
+.closeSearch {
+    display: block !important;
+        position: absolute !important;
+        top: 50%;
+        right: 20%;
+        transform: translateY(-50%);
+        fill: #727272 !important;
 }
 
 .closeSearchMobile {
@@ -90,110 +29,25 @@ top: 0;
     font-size: .75rem;
 }
 
-.navigationItem {
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: 500;
-    white-space: nowrap;
-}
-
-
-.mobileNavigationIcons {
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-
-.hamburger {
-    font-size: 2rem !important;
-    margin-left: .5rem;
-}
-
-.productsCategory {
-    font-size: 1rem;
-}
-
-.productsCategory li a {
-    transition: .2s;
-}
-
-.productsCategory li a:hover {
-    color: #676767;
-}
-
-.productsItemPraducts {
-    position: relative;
-}
-
-@media (min-width: 768px) {
-      
-    .navigationItemsWrapper {
-        position: relative;
-        width: fit-content;
-        flex-direction: row;
-        top: 0%;
-        padding: unset;
-        opacity: 1;
-        pointer-events: all;
-        left: unset;
-        transform: unset;
-    }
-    
-    .navigationItemsWrapper li {
-        margin: 0%;
-    }
-   
-    .navigationItem {
-        text-transform: uppercase;
-        font-size: 1rem;
-        font-weight: 500;
-        white-space: nowrap;
-        margin: 0 .5rem;
-        display: inline-block;
-    }
-
-    .navigationProducts {
-        margin: 0 0 0 .5rem;
-    }
-
-    .productsCategory {
-        position: absolute;
-        padding: .5rem;
-        background-color: #fff;
-        transition: .2s;
-        opacity: 0;
-        pointer-events: none;
-        width: 100%;
-    }
-
-    .productsCategory li {
-        margin: .5rem 0;
-    } 
-    
-    .hamburger {
-        display: none !important;
-    }
-    
-}
-
 .show {
     opacity: 1;
     pointer-events: all;
 }
 
+.searchOutput {
+    width: 100%;
+    max-height: 60vh;
+    background-color: #fff;
+    margin-top: 1rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.inputWrapper {
+    position: relative;
+}
+
 @media (min-width: 1024px) {
-    .searchWrapper {
-        position: relative;
-        top: 0;
-        width: 15%;
-        z-index: 10;
-        background-color: unset;
-        padding: unset;
-        left: unset;
-        transform: unset;
-        opacity: 1;
-        pointer-events: all;
-    }
 
     .closeSearchMobile {
         display: none !important;
@@ -209,11 +63,32 @@ top: 0;
     }
 
     .searchIcon {
+        position: absolute;
+        display: block !important;
+        right: 1%;
+        top: 50%;
+        right: 1%;
+        transform: translateY(-50%);
+        fill: #727272 !important;
+    }
+
+    .closeSearch {
         display: block !important;
         position: absolute !important;
         top: 50%;
         right: 1%;
         transform: translateY(-50%);
         fill: #727272 !important;
+    }
+
+    .searchOutput {
+        position: absolute;
+        width: 350%;
+       right: 0;
+       -webkit-box-shadow: 0px 1px 9px -5px rgba(0, 0, 0, 0.57);
+       -moz-box-shadow: 0px 1px 9px -5px rgba(0, 0, 0, 0.57);
+       box-shadow: 0px 1px 9px -5px rgba(0, 0, 0, 0.57);
+padding: 1rem;
+margin-top: 0;
     }
 }
