--- a/src/Navigation/Navigation.module.css
+++ b/src/Navigation/Navigation.module.css
@@ -7,6 +7,9 @@
     padding: .3rem;
     box-sizing: border-box;
     z-index: 10;
+    -webkit-box-shadow: 0px 4px 24px -20px rgba(66, 68, 90, 1);
+-moz-box-shadow: 0px 4px 24px -20px rgba(66, 68, 90, 1);
+box-shadow: 0px 4px 24px -20px rgba(66, 68, 90, 1);
 }
 
 .navigationWrapper {
