--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
   padding: 0;
   margin: 0;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+}
