--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -5,8 +5,8 @@
     flex-direction: column;
     align-items: center;
     padding-top: 3rem;
-    left: 50%;
-    transform: translate(-50%);
+    /* left: 50%;
+    transform: translate(-50%); */
     max-width: 1200px !important;
 }
 
