--- a/src/Products/Products.module.css
+++ b/src/Products/Products.module.css
@@ -1,7 +1,7 @@
 .mainWrapper {
     position: relative;
-    left: 50%;
-    transform: translate(-50%);
+    /* left: 50%;
+    transform: translate(-50%); */
     padding-top: 5rem;
 }
 .productsMainWrapper {
