--- a/src/Products/ProductItem/ProductItem.module.css
+++ b/src/Products/ProductItem/ProductItem.module.css
@@ -40,13 +40,14 @@
     .itemWrapper {
         width: 40%;
         flex-shrink: 0;
+        margin: 1rem 5%;
     }
 }
 
 @media (min-width: 1000px) {
     .itemWrapper {
-        width: 29%;
+        width: 21%;
         flex-shrink: 0;
-        margin: 1.5rem 0;
+        margin: 1.5rem 2%;
     }
 }
