--- a/src/Sorting/Sorting.module.css
+++ b/src/Sorting/Sorting.module.css
@@ -2,9 +2,10 @@
     position: relative;
     /* background-color: pink; */
     min-width: fit-content;
-    width: 50%;
+    width: 100%;
     font-size: 1rem;
     cursor: pointer;
+
     /* padding: 1rem; */
 }
 
@@ -63,8 +64,8 @@
     }
 }
 
-@media screen {
+@media (min-width: 1024px) {
     .select {
-        width: 15%;
+        width: 20%;
     } 
 }
