--- a/src/Products/ProductCard/ProductCard.module.css
+++ b/src/Products/ProductCard/ProductCard.module.css
@@ -61,7 +61,7 @@
 
 .smallPhotosWrapper {
     width: 100%;
-    overflow: scroll;
+    overflow: hidden;
     position: relative;
     display: flex;
     scroll-behavior: smooth;
@@ -73,12 +73,36 @@
 }
 
 .smallImageWrapper {
-    width: 33%;
+    /* width: 20% !important; */
     margin-right: 2%;
     flex-shrink: 0;
+    /* padding-bottom: 10% !important; */
+    background-color: aqua;
     /* max-height: 150px;
     display: flex;
     align-items: center; */
+}
+
+
+
+.carousel {
+    margin-top: .5rem;
+    /* width: 50%; */
+    /* width: fit-content !important; */
+    background-color: pink;
+    /* height: 100%; */
+    /* display: flex; */
+}
+
+.carousel__inner-slide {
+    position: relative !important;
+    height: fit-content !important;
+}
+
+.slider {
+    width: 100%;
+    background-color: antiquewhite;
+    /* display: flex; */
 }
 
 .smallImageWrapper:last-of-type {
@@ -86,7 +110,7 @@
 }
 
 .smallImage {
-    width: 100%;
+    width: 100% !important;
 }
 
 .more {
@@ -175,7 +199,7 @@
     }
 
     .smallImageWrapper {
-        max-height: 20vh;
+        /* max-height: 20vh; */
         overflow: hidden;
     }
 
