--- a/src/Products/ProductCard/ProductCard.module.css
+++ b/src/Products/ProductCard/ProductCard.module.css
@@ -35,6 +35,28 @@
     font-size: 1rem !important;
 }
 
+.carouselArrow {
+    position: absolute;
+    top: 50%;
+    /* font-size: 5rem; */
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.arrowBack {
+    transform: translate(-50%, -50%);
+}
+
+.arrowNext {
+    left: 100%;
+    transform: translate(-50%, -50%);
+}
+
 .topWrapper {
    width: 100%;
    display: flex;
@@ -291,3 +313,5 @@
 .disabled {
     display: none;
 }
+
+
