--- a/src/Products/ProductCard/BigPhoto/BigPhoto.module.css
+++ b/src/Products/ProductCard/BigPhoto/BigPhoto.module.css
@@ -8,12 +8,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* overflow: scroll; */
+}
+
+.BigPhoto {
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
 
 .imageWrapper {
     position: relative;
     /* height: 98%; */
     width: 100%;
+    /* overflow: scroll; */
    /* overflow: scroll; */
     /* top: 50%;
     left: 50%;
@@ -24,6 +32,8 @@
     width: 100%;
     cursor: zoom-in;
 }
+
+
 
 .closeIcon {
     position: absolute;
@@ -72,4 +82,11 @@
         height: 100%;
         /* transform: scale(2); */
     }
+
+    .BigPhoto {
+        width: unset;
+        height: auto;
+    }
+
+ 
 }
