--- a/src/HomePage/HomePage.module.css
+++ b/src/HomePage/HomePage.module.css
@@ -49,9 +49,8 @@
 
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
     .productsWrapper {
-        /* justify-content: space-between; */
     }
 
-}
+} */
