--- a/src/Skeleton/SkeletonProductCard/SkeletonProductCard.module.css
+++ b/src/Skeleton/SkeletonProductCard/SkeletonProductCard.module.css
@@ -12,20 +12,19 @@
     width: 100%;
     height: 88%;
     background-color: #F3F3F3;
-    background: linear-gradient(-45deg,   #f3f3f3, #ddd);
-  background-size: 400% 400%;
-  animation: gradient 3s ease infinite;
+    background: linear-gradient(-45deg, #f3f3f3, #ddd);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 .skeletonProductName {
     width: 100%;
     height: 4%;
     background-color: #F3F3F3;
-    background: rgb(243,243,243);
-/* animation: gradient 15s ease infinite; */
-background: linear-gradient(-45deg,   #f3f3f3, #ddd);
-  background-size: 400% 400%;
-  animation: gradient 3s ease infinite;
+    background: rgb(243, 243, 243);
+    background: linear-gradient(-45deg, #f3f3f3, #ddd);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
     margin: .5rem 0;
 }
 
@@ -33,17 +32,15 @@ background: linear-gradient(-45deg,   #f3f3f3, #ddd);
     width: 40%;
     height: 4%;
     background-color: #F3F3F3;
-    background: linear-gradient(-45deg,   #f3f3f3, #ddd);
-  background-size: 400% 400%;
-  animation: gradient 3s ease infinite;
+    background: linear-gradient(-45deg, #f3f3f3, #ddd);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 @media (min-width: 768px) {
     .skeletonCardWrapper {
         height: 60vh;
         width: 40%;
-        /* width: 21%; */
-        /* flex-shrink: 0; */
     }
 }
 
@@ -55,15 +52,15 @@ background: linear-gradient(-45deg,   #f3f3f3, #ddd);
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
-
-
