--- a/src/Search/Search.module.css
+++ b/src/Search/Search.module.css
@@ -47,6 +47,12 @@
     position: relative;
 }
 
+.cantFind {
+    font-size: .8rem;
+    padding-left: .75rem;
+    color: #616161;
+}
+
 @media (min-width: 1024px) {
 
     .closeSearchMobile {
@@ -90,5 +96,9 @@
         box-shadow: 0px 1px 9px -5px rgba(0, 0, 0, 0.57);
         padding: 1rem;
         margin-top: 0;
+    }
+
+    .cantFind {
+        text-align: center;
     }
 }
