--- a/src/Products/ProductCard/BigPhoto/BigPhoto.module.css
+++ b/src/Products/ProductCard/BigPhoto/BigPhoto.module.css
@@ -35,6 +35,7 @@
     cursor: pointer;
     padding: .5rem;
     box-sizing: content-box;
+    background-color: rgba(0, 0, 0, 0.253);
 }
 
 .arrowForwardIcon, .arrowBackIcon {
@@ -58,19 +59,66 @@
     display: none !important;
 }
 
+.photoSlider {
+    position: relative !important;
+}
+
+.carouselArrow {
+    position: absolute;
+    top: 50%;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrowBack {
+    transform: translateY(-50%);
+}
+
+.arrowNext {
+    left: 100%;
+    transform: translate(-100%, -50%);
+}
+
 @media (min-width: 765px) {
     .imageWrapper {
         width: unset;
+        /* width: 80%; */
+        width: calc(98vh/1.5);
+        object-fit: contain;
         height: 98%;
+        max-width: 1000px;
+        max-height: 1500px;
+
     }
     
     .photo {
-        width: unset;
-        height: 100%;
+        /* width: unset;
+        height: 100%; */
+        width: 100%;
     }
 
     .BigPhoto {
         width: unset;
         height: auto;
     }
+}
+
+@media (min-width: 1200px) {
+    .carouselArrow {
+        
+       padding: 1.3rem;
+        
+    }
+    .arrowBack {
+        transform: translate(-120%,-50%);
+    }
+    
+    .arrowNext {
+        left: 100%;
+        transform: translate(20%, -50%);
+    } 
 }
