--- a/src/Products/ProductCard/BigPhoto/BigPhoto.module.css
+++ b/src/Products/ProductCard/BigPhoto/BigPhoto.module.css
@@ -88,7 +88,7 @@
         width: unset;
         /* width: 80%; */
         width: calc(98vh/1.5);
-        object-fit: contain;
+        /* object-fit: contain; */
         height: 98%;
         max-width: 1000px;
         max-height: 1500px;
