--- a/src/Navigation/Navigation.module.css
+++ b/src/Navigation/Navigation.module.css
@@ -85,6 +85,7 @@
     font-size: 1rem;
     font-weight: 500;
     white-space: nowrap;
+
 }
 
 .mobileNavigationIcons {
@@ -112,6 +113,11 @@
 
 .productsItemPraducts {
     position: relative;
+}
+
+.youAreHere {
+    border-bottom: 3px solid rgb(80, 0, 80);
+    border-bottom: 2px solid #d9d9d9;
 }
 
 @media (min-width: 768px) {
@@ -145,6 +151,8 @@
         margin: 0 0 0 .5rem;
     }
 
+
+
     .productsCategory {
         position: absolute;
         padding: .5rem;
@@ -154,6 +162,7 @@
         pointer-events: none;
         width: 100%;
     }
+
 
     .productsCategory li {
         margin: .5rem 0;
