--- a/src/Products/Quality/Quality.module.css
+++ b/src/Products/Quality/Quality.module.css
@@ -4,6 +4,7 @@
     width: 100%;
     font-size: 1rem;
     cursor: pointer;
+    margin-top: .5rem;
 }
 
 .selected {
@@ -53,12 +54,13 @@
 
 @media (min-width: 768px) {
     .select {
-        width: 50%;
+        width: 30%;
+        margin-right: 1rem;
     }
 }
 
 @media (min-width: 1024px) {
     .select {
-        width: 30%;
+        width: 25%;
     } 
 }
